[package]
name = "wasm_reload_test"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.21.0"
anyhow = "1.0"
walrus = "0.18.0"
serde = "1.0"
serde_json = "1.0"
